fixed modal for infringements being stuck. fixed minor styleing issues so its more responsive.

--- a/src/components/Reports/PeopleReport/PeopleReport.css
+++ b/src/components/Reports/PeopleReport/PeopleReport.css
@@ -229,7 +229,5 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;    
-    width: 1000px;
-    margin-left: 732px;
   }
 }
